# ticket-by-ticket

./: .gitignore  README.md  csv2json.py  pyproject.toml  rules.md  setup.py
design/: api.md  api.openapi.yaml  bot.md  map.schema.json  sample.csv  sample.json
maps/: nyc287.json  nycphl.json
tests/: test_api.py  test_bot_brain.py  test_bot_integration.py  test_game.py  test_webui.py
tkt_by_tkt/: editor.py  game.py  gmcsv.py  mapsvg.py  models.py  server.py  tbtjson.py
tkt_by_tkt/bot/: __init__.py  advisor.py  brain.py  cli.py  client.py  knobs.py  moves.py  runner.py  view.py
tkt_by_tkt/webui/: app.js  index.html  style.css
